# time-aware-imputer

./: CHANGELOG.md  LICENSE  pyproject.toml  requirements-dev.txt  setup.py
examples/: iot_sensor_example.py  quickstart.py
tests/: test_analyzer.py  test_base.py  test_spline.py
time_aware_imputer/: CONTRIBUTING.md  README.md  __init__.py  analyzer.py  base.py  spline.py  test_manual.py
time_aware_imputer/docs/: USE_CASES.md
time_aware_imputer/tests/: __init__.py
time_aware_imputer/time_aware_imputer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
